<resources>
    <string name="facebook_app_id">380836923839765</string>
    <string name="facebook_client_token">15eba0840864c8039d04efdc50c26b28</string>
    <string name="app_name">TopQuiz</string>
    <string name="welcome_text">Welcome to TopQuiz. What\'s your name?</string>
    <string name="welcomeback_text">Welcome back, </string>
    <string name="welcomeback_text2">Your last score was </string>
    <string name="welcomeback_text3">, will you do better this time ? </string>
    <string name="difficulty">Choose the difficulty : </string>
    <string name="settings">Choose your theme</string>
    <string name="info">About</string>
    <string name="info2">This application was developped by Alex VO, Sami OURABAH and Cathy TRUONG</string>
    <string name="edit_questions">Add questions</string>
    <string name="edit_title">Add your question</string>
    <string name="edit_title1">Put your answers</string>
    <string name="edit_title2">Select the correct one</string>
    <string name="submit">Submit</string>*

    <string name="name_text">Please type your name</string>
    <string name="play_text">Play</string>
    <string name="user_name">Username</string>

    <string name="question_0">Who is the creator of Android? </string>
    <string name="answer_0_1">Andy Rubin</string>
    <string name="answer_0_2">Steve Wozniak</string>
    <string name="answer_0_3">Jake Wharton </string>
    <string name="answer_0_4">Paul Smith </string>
    <string name="index_answer_0">0</string>

    <string name="question_1">When did the first man land on the moon? </string>
    <string name="answer_1_1">1958</string>
    <string name="answer_1_2">1962</string>
    <string name="answer_1_3">1967</string>
    <string name="answer_1_4">1969</string>
    <string name="index_answer_1">3</string>

    <string name="question_2">What is the house number of The Simpsons? </string>
    <string name="answer_2_1">42</string>
    <string name="answer_2_2">101</string>
    <string name="answer_2_3">666</string>
    <string name="answer_2_4">742</string>
    <string name="index_answer_2">3</string>

    <!--string name="question_3">What is the name of our branch ?</string>
    <string name="answer_3_1">FI</string>
    <string name="answer_3_2">FE</string>
    <string name="answer_3_3">FG</string>
    <string name="answer_3_4">FB</string>
    <string name="index_answer_3">0</string-->

    <string name="question_4">	In what year was Google launched on the web?</string>

    <string name="answer_4_1">1998</string>
    <string name="answer_4_2">1989</string>
    <string name="answer_4_3">1995</string>
    <string name="answer_4_4">1991</string>
    <string name="index_answer_4">0</string>

    <string name="question_5">Which fruit is also a animal?</string>

    <string name="answer_5_1">Banana</string>
    <string name="answer_5_2">Kiwi</string>
    <string name="answer_5_3">Orange</string>
    <string name="answer_5_4">Apple</string>
    <string name="index_answer_5">1</string>

    <string name="question_6">What is the largest predator in the world?</string>

    <string name="answer_6_1">Lion</string>
    <string name="answer_6_2">Tiger</string>
    <string name="answer_6_3">Crocodile</string>
    <string name="answer_6_4">Polar bear</string>
    <string name="index_answer_6">3</string>

    <string name="question_7">	Which mammal cannot jump?</string>

    <string name="answer_7_1">Crocodile</string>
    <string name="answer_7_2">Sloth</string>
    <string name="answer_7_3">Elephant</string>
    <string name="answer_7_4">Snake</string>
    <string name="index_answer_7">3</string>

    <string name="question_8">How many languages are spoken in Switzerland?</string>

    <string name="answer_8_1">4</string>
    <string name="answer_8_2">2</string>
    <string name="answer_8_3">1</string>
    <string name="answer_8_4">6</string>
    <string name="index_answer_8">0</string>

    <string name="score">Your score is</string>

</resources>