<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".controller.MainActivity">

    <TextView
        android:id="@+id/main_textview_greeting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:gravity="center"
        android:padding="8dp"
        android:text="@string/welcome_text"
        android:textSize="20dp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/main_edittext_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name_text" />

    <TextView
        android:id="@+id/main_textview_difficulty"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:gravity="center"
        android:padding="8dp"
        android:text="@string/difficulty"
        android:textSize="20dp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="1dp">

        <Button
            android:id="@+id/main_button_easy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:textColor="@color/light_grey"
            android:backgroundTint="@color/easy"
            android:text="Easy" />

        <Button
            android:id="@+id/main_button_normal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:textColor="@color/light_grey"
            android:backgroundTint="@color/intermediate"
            android:text="Normal" />

        <Button
            android:id="@+id/main_button_hard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:textColor="@color/light_grey"
            android:backgroundTint="@color/hard"
            android:text="Hard" />

    </LinearLayout>

    <Button
        android:id="@+id/main_button_play"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="64dp"
        android:backgroundTint="#3341C3"
        android:textColor="@color/light_grey"
        android:text="@string/play_text" />

    <Button
        android:id="@+id/edit_button"   android:layout_gravity="center_horizontal"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:backgroundTint="#3341C3"
        android:textColor="@color/light_grey"
        android:text="@string/edit_questions" />
    <Space
        android:layout_width="60dp"
        android:layout_height="60dp"></Space>
    <LinearLayout
        android:id="@+id/footer" android:layout_width="fill_parent"
        android:layout_height="wrap_content" android:orientation="horizontal"
        android:layout_alignParentBottom="true">

        <ImageView
            android:id="@+id/infoicon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:src="@drawable/ic_baseline_info_24">

        </ImageView>
        <Space
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="6dp"/>
        <ImageView
            android:id="@+id/settingsicon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:src="@drawable/ic_baseline_settings_24"
           >

        </ImageView>
    </LinearLayout>

</LinearLayout>